--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,23 @@
-development:
+default: &default
   adapter: postgresql
-  database: librarycat_dev
-  encoding: utf8
-  template: template0
-  host: localhost
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
+development:
+  <<: *default
+  database: app_development
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-    adapter: postgresql
-    database: librarycat_test
-    encoding: utf8
-    template: template0
-    host: localhost
+  <<: *default
+  database: app_test
+
+production:
+  <<: *default
+  database: app_production
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
